force-app/main/default/objects/Property_document__c/Property_document__c.object-meta.xml
<CustomObject>
    <label>Property document</label>
    <nameField>
        <label>Property document</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>