force-app/main/default/objects/Property_document__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Documnet Upload Date</label>
    <type>Date</type>
</CustomField>