force-app/main/default/objects/Property_document__c/fields/Days_Until_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Expiration__c</fullName>
    <description>Calculates days until document expires</description>
    <formula>IF(
  NOT(ISBLANK(Expiration_Date__c)),
  Expiration_Date__c - TODAY(),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Expiration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>