force-app/main/default/objects/Property_document__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related opportunity</description>
    <inlineHelpText>Select the related opportunity</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Property documents</relationshipLabel>
    <relationshipName>Property_documents</relationshipName>
    <type>Lookup</type>
</CustomField>