force-app/main/default/objects/Property_document__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related property</description>
    <inlineHelpText>Select the related property</inlineHelpText>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Property documents</relationshipLabel>
    <relationshipName>Property_documents</relationshipName>
    <type>Lookup</type>
</CustomField>