force-app/main/default/objects/Property_document__c/validationRules/Required_Documents_for_Contracts.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Documents_for_Contracts</fullName>
    <active>true</active>
    <description>Ensures critical documents are marked as required</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Type__c, &quot;Contract&quot;),
  Is_document_required__c = FALSE,
  OR(
    CONTAINS(UPPER(Name), &quot;PURCHASE&quot;),
    CONTAINS(UPPER(Name), &quot;AGREEMENT&quot;),
    CONTAINS(UPPER(Name), &quot;TITLE&quot;)
  )
)</errorConditionFormula>
    <errorDisplayField>Is_document_required__c</errorDisplayField>
    <errorMessage>This type of contract document should typically be marked as required</errorMessage>
</ValidationRule>