force-app/main/default/objects/Property_document__c/validationRules/Valid_Upload_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Upload_Date</fullName>
    <active>true</active>
    <description>Ensures upload date is not in the future</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Date__c )),
  Date__c  &gt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Upload date cannot be in the future</errorMessage>
</ValidationRule>